<resources>
    <string name="app_name">BeginnerIdea</string>
    <string name="bin2dec">Bin2Dec</string>
    <string name="binary_input">Binary Input:</string>
    <string name="zero">0</string>
    <string name="result">Result: 0</string>
    <string name="calculate">Calculate</string>
    <string name="rgb2hex">RGB2Hex</string>
    <string name="quiz_app">Quiz App</string>
    <string name="coroutine">Coroutine</string>
    <string name="task_app">Task App</string>
    <string name="title">Title</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="dagger">Dagger</string>
    <string name="news">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="boutique">Boutique</string>
    <string name="mvvm">MVVM</string>
    <string name="stringlong">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</string>
    <string name="very_long">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquid at distinctio dolor hic ipsa, nihil praesentium quod. Ad amet at atque blanditiis culpa, eligendi enim fugiat impedit iusto ratione.</string>
    <string name="training">Training</string>
    <string name="note_app">Note App</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="text_directors">director</string>
    <string name="text_movie_title">text movie title</string>
    <string name="text_list_movie_directors">text_list_movie_directors</string>
    <string name="text_list_movie_star_actors">text_list_movie_star_actors</string>
    <string name="test_movie_description">test_movie_description</string>
    <string name="text_star_actors">text_star_actors</string>
    <string name="hello_world">HelloWorld</string>
    <string name="type_something">Type Something</string>
    <string name="change_text">Change Text</string>
    <string name="open_activity_and_change_text">Open Activity</string>
    <string name="title_dynamicfeature">Module Title</string>
    <string name="custom_training"> تمرین شخصی</string>
    <string name="go_to_next">Go to next</string>
    <string name="recycler_view_sample">Recycler View Sample</string>
    <string name="loading">" در حال دریافت اطلاعات"</string>
    <string name="status">وضعیت عادی</string>
    <string name="error_message">" خطا در دریافت اطلاعات"</string>

    <string name="username">Username</string>
    <string name="welcome_dagger">Welcome to Dagger World!</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration_dagger">Register to Dagger World!</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="login_error">Error logging you in. Try again</string>
    <string name="registration_error">Error happened during registration. Try again</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="tcs_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam pharetra, nibh eget fringilla fringilla, nibh leo gravida leo, sed imperdiet purus dolor vitae urna. Etiam nec tincidunt lacus. Aenean porttitor, orci feugiat porttitor sollicitudin, ante tellus tempus augue, ac facilisis augue eros at mi. Quisque iaculis arcu vel purus egestas, eu aliquet metus pharetra. Sed fringilla, velit ut ullamcorper volutpat, lorem velit tincidunt lacus, eu viverra leo felis vitae risus.</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="refresh_notifications">Refresh Notifications</string>
    <string name="unregister">Unregister</string>
    <string name="placeholder">Placeholder</string>
</resources>
